--- a/AppleWatchHeartRateCollection/Info.plist
+++ b/AppleWatchHeartRateCollection/Info.plist
@@ -21,11 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSHealthShareUsageDescription</key>
-	<string></string>
+	<string>Your Health data will be used for our study</string>
 	<key>NSHealthUpdateUsageDescription</key>
-	<string></string>
+	<string>Your Health data will be used for our study</string>
 	<key>NSMotionUsageDescription</key>
-	<string></string>
+	<string>Your Health data will be used for our study</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
